add and get details of washing machine
