# slot_booking/models/washing_mechine.py
@@ -1,0 +1,4 @@
+from django.db import models
+class WashingMechine(models.Model):
+    washing_machine_id = models.IntegerField()
+    is_active = models.BooleanField(default = True)
